{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 67,
  "lineage": "f4df5abd-2a84-12e4-2fd2-b9c5e254d1c1",
  "resources": [
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws-alb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:loadbalancer/app/test-alb2/f8ab8b793c264315",
            "arn_suffix": "app/test-alb2/f8ab8b793c264315",
            "dns_name": "internal-test-alb2-785647307.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:081951471531:loadbalancer/app/test-alb2/f8ab8b793c264315",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb2",
            "security_groups": [
              "sg-09c61d386bfdaec73"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054c76d7848025893"
              },
              {
                "subnet_id": "subnet-09425cf721e99ce90"
              }
            ],
            "subnets": [
              "subnet-054c76d7848025893",
              "subnet-09425cf721e99ce90"
            ],
            "tags": {
              "Name": "test-alb-private"
            },
            "tags_all": {
              "Name": "test-alb-private"
            },
            "vpc_id": "vpc-0cc3748db645f4dea",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test-alb-listner2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:listener/app/test-alb2/f8ab8b793c264315/b9e03b6d73cd8af6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:targetgroup/test-tg-private/6eeceb78e08c710c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:081951471531:listener/app/test-alb2/f8ab8b793c264315/b9e03b6d73cd8af6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:loadbalancer/app/test-alb2/f8ab8b793c264315",
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_lb.aws-alb2",
            "module.albb.aws_lb_target_group.target-group2",
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test-alb-listner3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:listener/app/test-alb2/f8ab8b793c264315/298240346b5e74ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:targetgroup/test-tg-private/6eeceb78e08c710c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:081951471531:listener/app/test-alb2/f8ab8b793c264315/298240346b5e74ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:loadbalancer/app/test-alb2/f8ab8b793c264315",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_lb.aws-alb2",
            "module.albb.aws_lb_target_group.target-group2",
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:081951471531:targetgroup/test-tg-private/6eeceb78e08c710c",
            "arn_suffix": "targetgroup/test-tg-private/6eeceb78e08c710c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:081951471531:targetgroup/test-tg-private/6eeceb78e08c710c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-tg-private",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc3748db645f4dea"
          }
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:081951471531:security-group/sg-09c61d386bfdaec73",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09c61d386bfdaec73",
            "ingress": [],
            "name": "alb-sg2",
            "name_prefix": "",
            "owner_id": "081951471531",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3748db645f4dea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:081951471531:security-group/sg-08bdd70965db4d39e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08bdd70965db4d39e",
            "ingress": [],
            "name": "asg-sg2",
            "name_prefix": "",
            "owner_id": "081951471531",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3748db645f4dea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-2547578588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bdd70965db4d39e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.asg-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-216426300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bdd70965db4d39e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.asg-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3903422718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bdd70965db4d39e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.asg-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1579408715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bdd70965db4d39e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.asg-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1566133635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08bdd70965db4d39e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.asg-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-1785963925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c61d386bfdaec73",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4048368757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c61d386bfdaec73",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-698771799",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c61d386bfdaec73",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2670474466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c61d386bfdaec73",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    },
    {
      "module": "module.albb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-684902624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09c61d386bfdaec73",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.albb.aws_security_group.alb-sg2"
          ]
        }
      ]
    }
  ]
}